--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"nodemon app.js",
-    "start-server":"node app.js"
+    "start": "nodemon app.js",
+    "start-server": "node app.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^2.0.21"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
